Mise à jour après correction code HTML et CSS - prêt pour début ajout code js

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                             <i class="ingredientBadge__closeBtn far fa-times-circle" id="ingredientBadge-closeBtn"></i>
                         </div>
 
-                        <!-- Device badge -->
-                        <div class="deviceBadge">
-                            <span class="deviceBadge__designation" id="deviceBadge">(show device selected)</span>
-                            <i class="deviceBadge__closeBtn far fa-times-circle" id="deviceBadge-closeBtn"></i>
+                        <!-- Appliances badge -->
+                        <div class="applianceBadge">
+                            <span class="applianceBadge__designation" id="applianceBadge">(show appliance selected)</span>
+                            <i class="applianceBadge__closeBtn far fa-times-circle" id="applianceBadge-closeBtn"></i>
                         </div>
 
-                        <!-- Utensils badge -->
-                        <div class="utensilBadge">
-                            <span class="utensilBadge__designation" id="utensilBadge">(show utensil selected)</span>
-                            <i class="utensilBadge__closeBtn far fa-times-circle" id="utensilBadge-closeBtn"></i>
+                        <!-- Ustensils badge -->
+                        <div class="ustensilBadge">
+                            <span class="ustensilBadge__designation" id="ustensilBadge">(show ustensil selected)</span>
+                            <i class="ustensilBadge__closeBtn far fa-times-circle" id="ustensilBadge-closeBtn"></i>
                         </div>
                     </div>
 
@@ -69,30 +69,30 @@
                             </a>
                         </div>
 
-                        <!-- Device dropdown -->
-                        <div class="deviceDropdown" id="deviceDropdown">
+                        <!-- Appliance dropdown -->
+                        <div class="applianceDropdown" id="applianceDropdown">
                             <a href="">
-                                <button class="deviceDropdown__openBtn">Appareil
-                                <i class="deviceDropdown__openChevron fas fa-chevron-down" id="deviceDropdown__openChevron"></i></button>
-                                <div class="deviceDropdown__hidden" id="deviceDropdown__hidden">
-                                    <input type="text" class="deviceDropdown__hidden--input" id="deviceDropdown__hidden--input"
+                                <button class="applianceDropdown__openBtn">Appareil
+                                <i class="applianceDropdown__openChevron fas fa-chevron-down" id="applianceDropdown__openChevron"></i></button>
+                                <div class="applianceDropdown__hidden" id="applianceDropdown__hidden">
+                                    <input type="text" class="applianceDropdown__hidden--input" id="applianceDropdown__hidden--input"
                                     placeholder="Rechercher un appareil">
-                                    <i class="deviceDropdown__closeChevron fas fa-chevron-up" id="deviceDropdown__closeChevron"></i>
-                                    <div id="deviceExample"></div>
+                                    <i class="applianceDropdown__closeChevron fas fa-chevron-up" id="applianceDropdown__closeChevron"></i>
+                                    <div id="applianceExample"></div>
                                 </div>
                             </a>
                         </div>
 
-                        <!-- Utensils dropdown -->
-                        <div class="utensilDropdown" id="utensilDropdown">
+                        <!-- Ustensils dropdown -->
+                        <div class="ustensilDropdown" id="ustensilDropdown">
                             <a href="">
-                                <button class="utensilDropdown__openBtn">Ustensiles
-                                <i class="utensilDropdown__openChevron fas fa-chevron-down" id="utensilDropdown__openChevron"></i></button>
-                                <div class="utensilDropdown__hidden" id="utensilDropdown__hidden">
-                                    <input type="text" class="utensilDropdown__hidden--input" id="utensilDropdown__hidden--input"
+                                <button class="ustensilDropdown__openBtn">Ustensiles
+                                <i class="ustensilDropdown__openChevron fas fa-chevron-down" id="ustensilDropdown__openChevron"></i></button>
+                                <div class="ustensilDropdown__hidden" id="ustensilDropdown__hidden">
+                                    <input type="text" class="ustensilDropdown__hidden--input" id="ustensilDropdown__hidden--input"
                                     placeholder="Rechercher un ustensile">
-                                    <i class="utensilDropdown__closeChevron fas fa-chevron-up" id="utensilDropdown__closeChevron"></i>
-                                    <div id="utensilExample"></div>
+                                    <i class="ustensilDropdown__closeChevron fas fa-chevron-up" id="ustensilDropdown__closeChevron"></i>
+                                    <div id="ustensilExample"></div>
                                 </div>
                             </a>
                         </div>
