Ajout fonction et classe pour récupérer de tous les éléments de notre recette ( JavaScript )

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                     <div class="dropdownBox" id="dropdownBox">
                         <!-- Ingredients dropdown -->
                         <div class="ingredientDropdown" id="ingredientDropdown">
-                            <a href="">
-                                <button class="ingredientDropdown__openBtn">Ingredients
+                            <button class="ingredientDropdown__openBtn">Ingredients
                                 <i class="ingredientDropdown__openChevron fas fa-chevron-down" id="ingredientDropdown__openChevron"></i></button>
                                 <div class="ingredientDropdown__hidden" id="ingredientDropdown__hidden">
                                     <input type="text" class="ingredientDropdown__hidden--input" id="ingredientDropdown__hidden--input"
@@ -66,13 +65,11 @@
                                     <i class="ingredientDropdown__closeChevron fas fa-chevron-up" id="ingredientDropdown__closeChevron"></i>
                                     <div id="ingredientExample"></div>
                                 </div>
-                            </a>
                         </div>
 
                         <!-- Appliance dropdown -->
                         <div class="applianceDropdown" id="applianceDropdown">
-                            <a href="">
-                                <button class="applianceDropdown__openBtn">Appareil
+                            <button class="applianceDropdown__openBtn">Appareil
                                 <i class="applianceDropdown__openChevron fas fa-chevron-down" id="applianceDropdown__openChevron"></i></button>
                                 <div class="applianceDropdown__hidden" id="applianceDropdown__hidden">
                                     <input type="text" class="applianceDropdown__hidden--input" id="applianceDropdown__hidden--input"
@@ -80,13 +77,11 @@
                                     <i class="applianceDropdown__closeChevron fas fa-chevron-up" id="applianceDropdown__closeChevron"></i>
                                     <div id="applianceExample"></div>
                                 </div>
-                            </a>
                         </div>
 
                         <!-- Ustensils dropdown -->
                         <div class="ustensilDropdown" id="ustensilDropdown">
-                            <a href="">
-                                <button class="ustensilDropdown__openBtn">Ustensiles
+                            <button class="ustensilDropdown__openBtn">Ustensiles
                                 <i class="ustensilDropdown__openChevron fas fa-chevron-down" id="ustensilDropdown__openChevron"></i></button>
                                 <div class="ustensilDropdown__hidden" id="ustensilDropdown__hidden">
                                     <input type="text" class="ustensilDropdown__hidden--input" id="ustensilDropdown__hidden--input"
@@ -94,7 +89,6 @@
                                     <i class="ustensilDropdown__closeChevron fas fa-chevron-up" id="ustensilDropdown__closeChevron"></i>
                                     <div id="ustensilExample"></div>
                                 </div>
-                            </a>
                         </div>
                     </div>
                 </div>
@@ -266,7 +260,12 @@
 
             
             </section>
-
         </div>
+
+        <!-- JS -->
+        <script src="./js/recipes.js"></script>
+        <script src="./js/classes.js"></script>
+        <script src="./js/functions.js"></script>
+        <script src="./js/index.js"></script>
     </body>
 </html>
