Ajout des fonctions de tri des éléments de la recette

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </form>
                     </div>
 
-                    <!-- Badges-->
+                    <!-- Badges / tag -->
                     <div class="badgeBox" id="badgeBox">
                         <!-- Ingredients badge -->
                         <div class="ingredientBadge">
@@ -57,9 +57,9 @@
                     <div class="dropdownBox" id="dropdownBox">
                         <!-- Ingredients dropdown -->
                         <div class="ingredientDropdown" id="ingredientDropdown">
-                            <button class="ingredientDropdown__openBtn">Ingredients
+                            <button class="ingredientDropdown__openBtn" id="displayIngredients">Ingredients
                                 <i class="ingredientDropdown__openChevron fas fa-chevron-down" id="ingredientDropdown__openChevron"></i></button>
-                                <div class="ingredientDropdown__hidden" id="ingredientDropdown__hidden">
+                                <div class="ingredientDropdown__hidden" id="ingredientDropdown__hidden allIngredients">
                                     <input type="text" class="ingredientDropdown__hidden--input" id="ingredientDropdown__hidden--input"
                                     placeholder="Rechercher un ingredient">
                                     <i class="ingredientDropdown__closeChevron fas fa-chevron-up" id="ingredientDropdown__closeChevron"></i>
@@ -69,9 +69,9 @@
 
                         <!-- Appliance dropdown -->
                         <div class="applianceDropdown" id="applianceDropdown">
-                            <button class="applianceDropdown__openBtn">Appareil
+                            <button class="applianceDropdown__openBtn" id="displayAppliances">Appareil
                                 <i class="applianceDropdown__openChevron fas fa-chevron-down" id="applianceDropdown__openChevron"></i></button>
-                                <div class="applianceDropdown__hidden" id="applianceDropdown__hidden">
+                                <div class="applianceDropdown__hidden" id="applianceDropdown__hidden allAppliances">
                                     <input type="text" class="applianceDropdown__hidden--input" id="applianceDropdown__hidden--input"
                                     placeholder="Rechercher un appareil">
                                     <i class="applianceDropdown__closeChevron fas fa-chevron-up" id="applianceDropdown__closeChevron"></i>
@@ -81,9 +81,9 @@
 
                         <!-- Ustensils dropdown -->
                         <div class="ustensilDropdown" id="ustensilDropdown">
-                            <button class="ustensilDropdown__openBtn">Ustensiles
+                            <button class="ustensilDropdown__openBtn" id="displayUstensils">Ustensiles
                                 <i class="ustensilDropdown__openChevron fas fa-chevron-down" id="ustensilDropdown__openChevron"></i></button>
-                                <div class="ustensilDropdown__hidden" id="ustensilDropdown__hidden">
+                                <div class="ustensilDropdown__hidden" id="ustensilDropdown__hidden allUstensils">
                                     <input type="text" class="ustensilDropdown__hidden--input" id="ustensilDropdown__hidden--input"
                                     placeholder="Rechercher un ustensile">
                                     <i class="ustensilDropdown__closeChevron fas fa-chevron-up" id="ustensilDropdown__closeChevron"></i>
