Ajout boîte messagerie numbre de recettes par saisies utilisateur

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
                     </form>
                 </div>
 
+                <!-- Search result box -->
+                <div class="resultBox" id="getValidRecipesCount">
+                    <div class="resultBox__validRecipesCount">
+                        <p class="resultBox__validRecipesCount--message" id="showValidRecipesCount">gfsfg</p>
+                        <i class="resultBox__validRecipesCount--closeCross far fa-times-circle" id="getValidRecipesCount-closeCross"></i>
+                    </div>
+                </div>
+
                 <!-- Badges / tags -->
                 <div class="badgeBox">
                     <div class="Badge" id="activeFilters"></div>
