Mise à jour après vérification au W3C

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- ================================ -->
         <!-- SECTION Search Badge Dropdown -->
-        <section class="SearchBadgeDropdown-section">
+        <div class="SearchBadgeDropdown-section">
             <!-- First section: "search bar" - "badge" - "dropdown or filter" -->
             <div class="SearchBadgeDropdown">
                 <!-- Search input bar -->
@@ -39,7 +39,7 @@
                 <!-- Search result box -->
                 <div class="resultBox" id="getValidRecipesCount">
                     <div class="resultBox__validRecipesCount">
-                        <p class="resultBox__validRecipesCount--message" id="showValidRecipesCount">gfsfg</p>
+                        <p class="resultBox__validRecipesCount--message" id="showValidRecipesCount"></p>
                         <i class="resultBox__validRecipesCount--closeCross far fa-times-circle" id="getValidRecipesCount-closeCross"></i>
                     </div>
                 </div>
@@ -108,13 +108,13 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
 
         <!-- ================================ -->
         <!-- SECTION Thumb card -->
-        <section class="thumbCard-section" id="menuCards">
+        <div class="thumbCard-section" id="menuCards">
             <!-- All Thumb cards are here -->
-        </section>
+        </div>
     </div>
 
     <!-- ================================ -->
