--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <!-- Ingredients dropdown -->
                     <div class="ingredientDropdown" id="ingredientDropdown">
                         <button class="ingredientDropdown__openBtn" id="displayIngredients">
-                            Ingredients
-                            <i class="ingredientDropdown__openChevron fas fa-chevron-down"
+                            <span class="ingredientDropdown__openBtn--name">Ingredients</span> 
+                            <i class="ingredientDropdown__openBtn--chevron fas fa-chevron-down"
                                 id="ingredientDropdown__openChevron"></i>
                         </button>
 
@@ -70,11 +70,11 @@
                         </div>
                     </div>
 
-                    <!-- Appliance dropdown -->
+                    <!-- Appliances dropdown -->
                     <div class="applianceDropdown" id="applianceDropdown">
                         <button class="applianceDropdown__openBtn" id="displayAppliances">
-                            Appareil
-                            <i class="applianceDropdown__openChevron fas fa-chevron-down"
+                            <span class="applianceDropdown__openBtn--name">Appareil</span>
+                            <i class="applianceDropdown__openBtn--chevron fas fa-chevron-down"
                                 id="applianceDropdown__openChevron"></i>
                         </button>
 
@@ -85,15 +85,16 @@
                         </div>
 
                         <div class="applianceDropdown__list" id="displayAllAppliances-list">
-                            <div id="allAppliances" class="applianceDropdown__list--allAppliances"></div>
+                            <div id="allAppliances" class="applianceDropdown__list--allAppliances">
+                            </div>
                         </div>
                     </div>
 
                     <!-- Ustensils dropdown -->
                     <div class="ustensilDropdown" id="ustensilDropdown">
                         <button class="ustensilDropdown__openBtn" id="displayUstensils">
-                            Ustensiles
-                            <i class="ustensilDropdown__openChevron fas fa-chevron-down"
+                            <span class="ustensilDropdown__openBtn--name">Ustensiles</span>
+                            <i class="ustensilDropdown__openBtn--chevron fas fa-chevron-down"
                                 id="ustensilDropdown__openChevron"></i>
                         </button>
 
