Debug mise à jour liste des recettes lors des recherches

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <!-- Search input bar -->
                 <div class="searchBar">
                     <form class="searchBar__form" id="searchBar">
-                        <input type="text" class="searchBar__form--input" id="input-search"
+                        <input type="text" class="searchBar__form--input" id="main-search"
                             placeholder="Rechercher un ingredient, appareil, ustensiles ou une recette" />
                         <i class="searchBar__form--icon fas fa-search"></i>
                     </form>
